--- a/package.json
+++ b/package.json
@@ -2,13 +2,19 @@
   "name": "user-management-table",
   "version": "0.0.1",
   "type": "module",
+  "engines": {
+    "node": "20.12.2"
+  },
   "author": "Artem Papusha <https://github.com/ArtemPapusha>",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite & (yarn run typed-scss:dev)",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "prettier": "prettier ./src --write"
+    "prettier": "prettier ./src --write",
+    "lint:dev": "yarn prettier && yarn lint --fix",
+    "typed-scss": "typed-scss-modules src/**/*.module.scss --nameFormat camel --aliasPrefixes.@style src/assets/style/",
+    "typed-scss:dev": "yarn typed-scss --watch"
   },
   "dependencies": {
     "@ant-design/icons": "^5.4.0",
@@ -17,7 +23,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.0.3",
-    "reselect": "^5.1.0"
+    "reselect": "^5.1.0",
+    "react-intl": "^6.6.5"
   },
   "devDependencies": {
     "@eslint/compat": "^1.1.1",
@@ -27,7 +34,7 @@
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
-    "eslint": "^9.9.1",
+    "eslint": "^8.57.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
@@ -36,6 +43,12 @@
     "prettier": "^3.2.5",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    "path": "^0.12.7",
+    "vite": "^5.4.1",
+    "@types/node": "^20.12.5",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-jsdoc": "^48.2.3",
+    "sass": "^1.74.1",
+    "typed-scss-modules": "^8.0.1"
   }
 }
